<resources>
    <string name="app_name">Popular Movies</string>


    <!-- No data found exceptions -->
    <string name="no_review_found">No review is found for the movie!</string>
    <string name="no_trailer_found">No trailer is found for the movie!</string>

    <!-- Detail activity explanations-->
    <string name="reviews_exp">Reviews:</string>
    <string name="trailers_exp">Videos:</string>

    <!--Connection related-->
    <string name="being_fecthed_info">The movies are being fetched...</string>
    <string name="favorite_dialog">Your favorite movies are being brought...</string>
    <string name="review_movie_progress">Reviews about the movie is being brought...</string>
    <string name="video_movie_progress">Videos about the movie is being brought...</string>
    <string name="check_internet">Check your internet connection!</string>

    <!--Detail activity strings-->
    <string name="tv_movie_title">Movie Title:</string>
    <string name="tv_movie_user_rating">User Rating:</string>
    <string name="tv_movie_release_date">Release Date:</string>
    <string name="tv_movie_plot">Movie Plot:</string>
    <string name="tv_movie_poster">Movie Poster</string>
    <string name="iv_star_content">Star</string>
    <string name="dialog_ok">Done</string>

    <!--Navigation Drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Activity Names-->
    <string name="title_top_rated_activity">Top Rated Movies</string>
    <string name="title_search_activity">Search For a Movie</string>
    <string name="title_setting_activity">Settings</string>
    <string name="title_favorites_activity">My Favorite Movies</string>
    <string name="title_popular_movies_activity">Popular Movies</string>

    <!--Bottom Navigation Items-->
    <string name="popular_movies_bn">Popular</string>
    <string name="top_rated_bn">Top Rated</string>
    <string name="my_favorites_bn">Favorites</string>
    <string name="search_bn">Search</string>

    <!--Keys for movie details-->
    <string name="movie_key">movieDetails</string>

    <!--SharedPref Name-->
    <string name="shared_pref_name">MoviePrefs</string>

    <!--DB Exceptions-->
    <string name="row_insertion_failed">Failed to insert row into:</string>
    <string name="unknown_uri_exception">Unknown URI:</string>
</resources>
